--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "if-env": "^1.0.4"
+    "bootstrap": "^4.3.1",
+    "if-env": "^1.0.4",
+    "react-bootstrap": "^1.0.0-beta.16"
   }
 }
