--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.7.12"
   }
 }
