--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "if-env": "^1.0.4",
-    "react-bootstrap": "^1.0.0-beta.16"
+    "mongoose": "^5.7.12"
   }
 }
