--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,13 @@
   "name": "mern",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.6.3",
+    "react-event-calendar": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1"
   },
