--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.6.3",
+    "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.1.2",
