--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "proxy": "http://localhost:8080/",
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.6.3",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1"
   },
